fix: invisible hover state on footer social logos (#539)
The gray background matched parent background, so not visible. So, I fix it by making color darker.

--- a/apps/tup-cms/src/taccsite_custom/tup_cms/static/tup_cms/css/for-tup-cms/components/c-footer.css
+++ b/apps/tup-cms/src/taccsite_custom/tup_cms/static/tup_cms/css/for-tup-cms/components/c-footer.css
@@ -101,7 +101,7 @@ svg {
     padding: 1rem; /* rem, because any em value is 0 because font-size: 0 */
 }
 .c-footer .logos--social a:hover {
-    background-color: var(--global-color-primary--x-dark);
+    background-color: var(--global-color-primary--xx-dark);
 }
 .c-footer .logos--social svg {
     height: 2.5rem; /* rem, so it scales like text */
